# Enginners

./: README.md  app.py  crew.jsonc  project_scope.txt  pyproject.toml
agents/: backend_engineer.jsonc  devops_engineer.jsonc  frontend_engineer.jsonc  project_manager.jsonc  qa_engineer.jsonc  software_architect.jsonc
knowledge/: sources.py
llm/: __init__.py  config.py  cooldown.py  logger.py  metrics.py  provider_factory.py  provider_pool.py  retry.py  router.py
llm/providers/: __init__.py  base_provider.py  gemini_provider.py  groq_provider.py
project_plan/: development_roadmap  feature_prioritization
project_scope/: feature_priority_list
requirements/: non_functional_requirements.txt
