[project]
name = "ai_engineering_optimization"
version = "0.1.0"
description = "AI_Engineering_optimization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]>=1.15.1,<2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills", "llm"]

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
